Fix error spacing
git-svn-id: svn://gallium.openminds.be/opt/svn/fork2/trunk@2065 869247f0-a1f3-4d5c-9449-4b73fc252fa6

--- a/default_www/backend/modules/authentication/layout/css/authentication.css
+++ b/default_www/backend/modules/authentication/layout/css/authentication.css
@@ -133,10 +133,6 @@
 			width: 180px;
 		}
 
-		#loginBox .horizontal .formError {
-			padding-left: 110px;
-		}
-
 		#loginBox p.spacing {
 			padding-bottom: 0;
 			padding-left: 163px;
